--- a/data/gtk/help-overlay.ui
+++ b/data/gtk/help-overlay.ui
@@ -22,6 +22,13 @@ SPDX-License-Identifier: GPL-3.0-or-later
 
             <child>
               <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Open ZIM Archives</property>
+                <property name="action-name">app.open-zim-archives</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Main menu</property>
                 <property name="accelerator">F10</property>
               </object>
