Move archive list to a new dialog

--- a/data/gtk/menu-main.ui
+++ b/data/gtk/menu-main.ui
@@ -10,10 +10,16 @@ SPDX-License-Identifier: GPL-3.0-or-later
   <menu id="main_menu">
 
     <!-- App section -->
+    <!-- <section> -->
+    <!--   <item> -->
+    <!--     <attribute name="label" translatable="yes">Open ZIM Archives…</attribute> -->
+    <!--     <attribute name="action">app.open-zim-archives</attribute> -->
+    <!--   </item> -->
+    <!-- </section> -->
     <section>
       <item>
-        <attribute name="label" translatable="yes">Open ZIM Archives…</attribute>
-        <attribute name="action">app.open-zim-archives</attribute>
+        <attribute name="label" translatable="yes">Manage Archives…</attribute>
+        <attribute name="action">app.manage-archives</attribute>
       </item>
     </section>
     <section>
